--- a/style.css
+++ b/style.css
@@ -1,77 +1,145 @@
 * {
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .main {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .content {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
-
-.hero-section{
-    display: flex;
-    justify-content: space-between;
-    background-color: #1f2937;
-    gap: 5vw;
+.hero-section {
+  display: flex;
+  justify-content: space-between;
+  background-color: #1f2937;
+  gap: 5vw;
 }
 
-.hero-section, .header {
-    padding: 0 15vw;
+.hero-section,
+.info-section,
+.quote-section {
+  padding: 10vh 15vw;
 }
 
 .header {
-    background-color: #1f2937;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 100px;
+  padding: 0vh 15vw;
+}
+
+.header {
+  background-color: #1f2937;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 100px;
 }
 
 .header p {
-    font-size: 24px;
-    color: #f9faf8;
-    font-weight: 900;
+  font-size: 24px;
+  color: #f9faf8;
+  font-weight: 900;
 }
 
 .header .header-links-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 10px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
 
-.header-link a, .hero-secondary-text {
-    color: #e5e7eb;
-    font-size: 18px;
-    text-decoration: none;
+.header-link a,
+.hero-secondary-text {
+  color: #e5e7eb;
+  font-size: 18px;
+  text-decoration: none;
 }
 
 .hero-text-container {
-    display:flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: space-around;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-around;
+  gap: 10px;
 }
 
 .hero-main-text {
-    color: #f9faf8;
-    font-size: 48px;
-    font-weight: 900;
+  color: #f9faf8;
+  font-size: 48px;
+  font-weight: 900;
 }
 
 .button {
-    background-color:#3882f6;
-    border-radius: 5px;
-    padding: 5px 20px;
-    color: #f9faf8;
-    font-weight: 900;
+  background-color: #3882f6;
+  border-radius: 5px;
+  padding: 5px 20px;
+  color: #f9faf8;
+  font-weight: 900;
+}
+
+.info-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-section h2 {
+  font-size: 36px;
+}
+
+.info-boxes {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 5vh 5vh;
+  gap: 25px;
+}
+
+.info-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 200px;
+  gap: 10px;
+}
+
+.info-img {
+  border: 5px solid blue;
+  border-radius: 10px;
+  width: 200px;
+  height: 200px;
+}
+
+.info-text {
+  font-size: 18px;
+  text-align: center;
+  color: #1f2937;
+}
+
+.quote-section {
+  display: flex;
+  flex-direction: column;
+  min-height: 500px;
+  background-color: #e5e7eb;
+}
+
+.quote-text {
+  margin: auto;
+  font-size: 36px;
+  color: #1f2937;
+  font-weight: 300;
+}
+
+.quote-person {
+  margin-left: auto;
+  font-size: 24px;
+  color: #1f2937;
+  font-weight: 600;
 }
