--- a/style.css
+++ b/style.css
@@ -143,3 +143,44 @@
   color: #1f2937;
   font-weight: 600;
 }
+
+.action-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 500px;
+}
+
+.action-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  min-height: auto;
+  padding: 5vh 5vw;
+  width: 1000px;
+  gap: 50px;
+  background-color: #3882f6;
+}
+
+.action-button {
+  border: 2px solid white;
+  background-color: #3882f6;
+  border-radius: 5px;
+  padding: 5px 20px;
+  color: #f9faf8;
+  font-weight: 900;
+  font-size: 18px;
+}
+
+.action-text {
+    font-size: 24px;
+    color: white;
+    font-weight: 800;
+}
+
+.action-subtext {
+    font-size: 18px;
+    color:#e5e7eb
+}
