--- a/style.css
+++ b/style.css
@@ -175,12 +175,25 @@
 }
 
 .action-text {
-    font-size: 24px;
-    color: white;
-    font-weight: 800;
+  font-size: 24px;
+  color: white;
+  font-weight: 800;
 }
 
 .action-subtext {
-    font-size: 18px;
-    color:#e5e7eb
+  font-size: 18px;
+  color: #e5e7eb;
+}
+
+.footer {
+  background-color: #1f2937;
+  display: flex;
+  justify-content: center;
+  min-height: 200px;
+}
+
+.footer p {
+  margin: auto;
+  font-size: 18px;
+  color: white;
 }
